# sitrep

./: .env.example  .gitignore  README.md  claude_plugin.json  plugin.py  pyproject.toml
docs/: ANALYSIS_INDEX.md  ARCHITECTURE_DIAGRAMS.md  README.md  SITREP_CODEBASE_ANALYSIS.md  USAGE.md
docs/adr/: 0001-multi-agent-architecture-documentation.md  0002-clean-architecture-layer-boundaries.md  0003-lazy-imports-optional-dependencies.md  0004-multi-database-approach.md  0005-hybrid-retrieval-fusion-weights.md  0006-rl-compression-training-environment.md  0007-memory-consolidation-forgetting-policy.md  0008-query-intent-classification-routing.md  0009-conflict-resolution-fact-merging.md  0010-lineage-tracking-decision-reversibility.md  README.md
eval/: README.md  scifact_eval.jsonl  scifact_qrels.jsonl  scifact_queries.jsonl
eval/results/: SUMMARY.md  baseline_before_20260703T040353.json  baseline_before_20260703T040653.json  final_regression_20260703T115708.json  phaseA_off_20260703T042839.json  phaseA_tuned_20260703T043150.json  phase_a_after_20260703T042525.json  post_phase_c_20260703T104730.json  real_base_off_20260703T100105.json  real_ppr_015_20260703T100246.json  real_ppr_030_20260703T100435.json
scripts/: __init__.py  analyze_lineage.py  backup.py  eval.py  fetch_eval_data.py  ingest_batch.py  query_cli.py  run_forgetting.py  run_web.py  train_compression_agent.py  update_kv_cache.py
src/: __init__.py
src/adapters/: __init__.py
src/application/: __init__.py  active_learning.py  anomaly.py  causal.py  conflict.py  consolidation.py  dto.py  evaluation.py  events.py  feedback.py  forgetting.py  ingest.py  judge.py  lineage.py  multimodal.py  query.py  query_orchestrator.py  temporal_reasoning.py  train.py  versioning.py
src/domain/: __init__.py  (+5 more)
tests/: __init__.py
(+99 files in other folders)
