[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sitrep-engine"
version = "0.1.0"
description = "Self-Improving Token-Reduced Embeddable Pipeline — local, privacy-first context engineering."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "SITREP Contributors" }]
keywords = ["rag", "knowledge-graph", "llm", "ppo", "context-engineering", "local"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
rag = ["chromadb>=0.4.22", "sentence-transformers>=2.3,<4"]
graph = ["kuzu>=0.4.0"]
rl = [
    "stable-baselines3>=2.2,<3",
    "gymnasium>=0.29,<2",
    "torch>=2.1,<3",
    "scikit-learn>=1.3,<2",
]
llm = ["transformers>=4.40,<5", "ollama>=0.2", "accelerate>=0.27"]
web = ["gradio>=4.20,<5"]
duckdb = ["duckdb>=0.10", "pyarrow>=14"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-asyncio>=0.23"]
all = [
    "sitrep-engine[rag,graph,rl,llm,web,duckdb]",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
